--- a/src/contact.html
+++ b/src/contact.html
@@ -23,13 +23,7 @@
         <div id="navbarResponsive"class="navbar-collapse collapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./whoarewe.html">Who are we</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./music.html">Our music</a>
+              <a class="nav-link" href="./index.html">Our music</a>
             </li>
           </ul>
         </div>
@@ -73,13 +67,7 @@
         <div id="navbarResponsive"class="navbar-collapse collapse flex-grow-0">
           <ul class="navbar-nav" >
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./whoarewe.html">Who are we</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./music.html">Our music</a>
+              <a class="nav-link" href="./index.html">Our music</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./contact.html">Contact</a>
