--- a/src/index.html
+++ b/src/index.html
@@ -12,20 +12,20 @@
   </head>
   
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-        <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img src="./assets/images/logo.png" width="25px" alt="The dogs logo"/>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+    <nav class="flex items-center justify-between flex-wrap p-6">
+      <div class="flex items-center flex-shrink-0 text-white mr-6">
+        <a class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54" href="index.html"><img src="./assets/images/logo.png" alt="The dogs logo"/></a>
+      </div>
+      <div class="block lg:hidden">
+        <button class="flex items-center px-3 py-2 border rounded hover:text-black hover:border-black">
+          <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
         </button>
-        <div id="navbarResponsive"class="navbar-collapse collapse">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact</a>
-            </li>
-          </ul>
+      </div>
+      <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+        <div class="text-sm lg:flex-grow">
+          <a href="./contact.html" class="block mt-4 lg:inline-block lg:mt-0 hover:text-gray mr-4">
+            Contact
+          </a>
         </div>
       </div>
     </nav>
@@ -78,33 +78,33 @@
         <div class="col-sm-6"></div>
       </div>
     </div>
- 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img src="./assets/images/logo.png" width="25px" alt="The dogs logo"/>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+
+    <nav class="flex items-center justify-between flex-wrap p-6">
+      <div class="flex items-center flex-shrink-0 text-white mr-6">
+        <a class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54" href="index.html"><img src="./assets/images/logo.png" alt="The dogs logo"/></a>
+      </div>
+      <div class="block lg:hidden">
+        <button class="flex items-center px-3 py-2 border rounded hover:text-black hover:border-black">
+          <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
         </button>
-        <div id="navbarResponsive"class="navbar-collapse collapse flex-grow-0">
-          <ul class="navbar-nav" >
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Our music</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-        <div class="navbar-text">
-          <a href="https://instagram.com/"><i class="p-2 fab fa-instagram"></i></a>
-          <a href="https://twitter.com/"><i class="p-2 fab fa-twitter"></i></a>
-          <a href="https://facebook.com/"><i class="p-2 fab fa-facebook"></i></a>
+      </div>
+      <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+        <div class="text-sm lg:flex-grow">
+          <a href="./index.html" class="block mt-4 lg:inline-block lg:mt-0 hover:text-gray mr-4">
+            Our music
+          </a>
+          <a href="./contact.html" class="block mt-4 lg:inline-block lg:mt-0 hover:text-gray mr-4">
+            Contact
+          </a>
         </div>
       </div>
+      <div class="navbar-text">
+        <a href="https://instagram.com/"><i class="p-2 fab fa-instagram"></i></a>
+        <a href="https://twitter.com/"><i class="p-2 fab fa-twitter"></i></a>
+        <a href="https://facebook.com/"><i class="p-2 fab fa-facebook"></i></a>
+      </div>
     </nav>
-  
+
     <script src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
   
   </body>
