--- a/src/contact.html
+++ b/src/contact.html
@@ -12,29 +12,22 @@
   </head>
   
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-        <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img src="./assets/images/logo.png" width="25px" alt="The dogs logo"/>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div id="navbarResponsive"class="navbar-collapse collapse">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Our music</a>
-            </li>
-          </ul>
-        </div>
+    <nav class="flex items-center justify-between bg-gray-200 px-12 py-4">
+      <div>
+        <a href="index.html"><img class="h-10"src="./assets/images/logo.png" alt="The dogs logo"/></a>
       </div>
+      <div>
+        <a href="./contact.html" class="hover:bg-gray-600">Contact</a>
+      </div>  
     </nav>
 
-    <div class="container tittle">
-      <h1><img src="./assets/images/logo.png" width="50px" alt="The dogs logo"/>The dogs</h1>
-      <h5 class="font-italic">rock music band</h5>
+    <div class="flex items-center justify-center pt-4">
+      <img class="pr-4" src="./assets/images/logo.png" width="100px" alt="The dogs logo"/><span class="text-6xl tracking-wider">The dogs</span>
     </div>
-
+    <div class="flex justify-center pb-4">
+      <span class="italic text-4xl">rock music band</span>
+    </div>
+    
     <div class="container">
       <div class="jumbotron">
         <h1 class="lead">Contact us</h1>
@@ -52,33 +45,22 @@
         <div class="form-group">
           <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" placeholder="Message"></textarea>
         </div>
-        <button class="btn btn-secondary float-right" type="submit">Send</button>
+        <!--<button class="btn btn-secondary float-right" type="submit">Send</button>-->
       </form>
     </div>
       
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img src="./assets/images/logo.png" width="25px" alt="The dogs logo"/>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div id="navbarResponsive"class="navbar-collapse collapse flex-grow-0">
-          <ul class="navbar-nav" >
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Our music</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-        <div class="navbar-text">
-          <a href="https://instagram.com/"><i class="p-2 fab fa-instagram"></i></a>
-          <a href="https://twitter.com/"><i class="p-2 fab fa-twitter"></i></a>
-          <a href="https://facebook.com/"><i class="p-2 fab fa-facebook"></i></a>
-        </div>
+    <nav class="flex items-center justify-between bg-gray-200 px-12 py-4">
+      <div>
+        <a href="index.html"><img class="h-10"src="./assets/images/logo.png" alt="The dogs logo"/></a>
+      </div>
+      <div>
+        <a href="./index.html" class="hover:bg-gray-600 mr-4">Our music</a>
+        <a href="./contact.html" class="hover:bg-gray-600 mr-4">Contact</a>
+      </div>
+      <div class="invisible md:visible">
+        <a href="https://instagram.com/"><i class="p-2 fab fa-instagram"></i></a>
+        <a href="https://twitter.com/"><i class="p-2 fab fa-twitter"></i></a>
+        <a href="https://facebook.com/"><i class="p-2 fab fa-facebook"></i></a>
       </div>
     </nav>
   
