--- a/src/index.html
+++ b/src/index.html
@@ -12,93 +12,68 @@
   </head>
   
   <body>
-    <nav class="flex items-center justify-between flex-wrap p-6">
-      <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <a class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54" href="index.html"><img src="./assets/images/logo.png" alt="The dogs logo"/></a>
+    <nav class="flex items-center justify-between bg-gray-200 px-12 py-4">
+      <div>
+        <a href="index.html"><img class="h-10"src="./assets/images/logo.png" alt="The dogs logo"/></a>
       </div>
-      <div class="block lg:hidden">
-        <button class="flex items-center px-3 py-2 border rounded hover:text-black hover:border-black">
-          <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
-        </button>
-      </div>
-      <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
-        <div class="text-sm lg:flex-grow">
-          <a href="./contact.html" class="block mt-4 lg:inline-block lg:mt-0 hover:text-gray mr-4">
-            Contact
-          </a>
-        </div>
-      </div>
+      <div>
+        <a href="./contact.html" class="hover:bg-gray-600">Contact</a>
+      </div>  
     </nav>
-    
-    <div class="container tittle">
-      <h1><img src="./assets/images/logo.png" width="50px" alt="The dogs logo"/>The dogs</h1>
-      <h5 class="font-italic">rock music band</h5>
+      
+    <div class="flex items-center justify-center pt-4">
+      <img class="pr-4" src="./assets/images/logo.png" width="100px" alt="The dogs logo"/><span class="text-6xl tracking-wider">The dogs</span>
+    </div>
+    <div class="flex justify-center pb-4">
+      <span class="italic text-4xl">rock music band</span>
     </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <p>We are "The Dogs" a Rock n Roll group from Bilbao, Basque Country. Since 2017, we have been working on a better alternative to classic rock and roll. We play others groups music but giving our best. The careful selection and execution of deep cut vinyl tracks will take you back to where you were when these gems were released. No costumes, just great tunes served up by a tight musical unit who truly love what they do, and give the proper respect and reverence the music deserves.</p>
-          <p>We like to play our music anywhere, the street, in front of a small audience or in a big music concert. If we could choose, we like street the most. There we feel comfortable and can express our music at the best format. The music needs natural ways for expression, and the street and the improvisation give us that.</p>
-          <p>We haven't record any disc at the moment. The reason is simple, we like to play music in live.</p>
-        </div>
-        <div class="col-sm-6">
-          <img src="./assets/images/concert1.jpg" class="img-fluid" alt="The dogs logo"/>
-          <p class="photo"><a href="https://www.behance.net/gallery/64267203/Roadkillsoda-2018">"Roadkillsoda 2018"</a><span> by <span>Lin Al Choibi</span></span> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-ND 4.0</a><a href="https://creativecommons.org/licenses/by-nc-nd/4.0/?ref=ccsearch&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"></a></p>
-        </div>
+    <div class="flex px-12 py-4">
+      <div class="w-1/2 pr-4">
+        <p class="pb-2 ">We are "The Dogs" a Rock n Roll group from Bilbao, Basque Country. Since 2017, we have been working on a better alternative to classic rock and roll. We play others groups music but giving our best. The careful selection and execution of deep cut vinyl tracks will take you back to where you were when these gems were released. No costumes, just great tunes served up by a tight musical unit who truly love what they do, and give the proper respect and reverence the music deserves.</p>
+        <p class="pb-2">We like to play our music anywhere, the street, in front of a small audience or in a big music concert. If we could choose, we like street the most. There we feel comfortable and can express our music at the best format. The music needs natural ways for expression, and the street and the improvisation give us that.</p class="py-2">
+        <p class="pb-2">We haven't record any disc at the moment. The reason is simple, we like to play music in live.</p class="py-2">
       </div>
-      <hr>
-      <div class="row">
-        <div class="col-sm-3">
-          <img src="./assets/images/concert.jpg" class="img-fluid" alt="The dogs logo"/>
-          <p class="photo"><a href="https://www.behance.net/gallery/64267479/Ufomammut-2018">"Ufomammut 2018"</a><span> by <span>Lin Al Choibi</span></span> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-ND 4.0</a><a href="https://creativecommons.org/licenses/by-nc-nd/4.0/?ref=ccsearch&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"></a></p>
-        </div>
-        <div class="col-sm-9">  
-          <dl>
-            <dt>We bark, but we don't bite</dt>
-            <dd>Yes, we make noise, we are dogs. But don't be afraid because we don't bite, we are really charmy.</dd>
-            <dt>We like the street</dt>
-            <dd>Yes, we rather than be at home. It will be easy to find us time to time playing music in any corner.</dd>
-            <dt>We go out at night</dt>
-            <dd>Yes, the day can be a great moment to play music, but our best it is given by night.</dd>
-          </dl>
-        </div>
-      </div>
-      <hr>
-      <div class="row">
-        <div class="col-sm-3">
-          <h5><strong> People tells us "It is easy to play someone else music". We answer "Maybe. But listen and tell us if it's better than the original".</strong></h5>
-        </div>
-        <div class="col-sm-9">
-          <p>After 2 years of steady gigs, "The Dogs" are clearly running on all cylinders and have the same enthusiasm since the first moment. With over 35 songs in the current library, "The Dogs" can easily play 2 hours without repeating a song. The list of artists runs from The Ramones, Bruce Springteen, ZZ Top, The Grateful Dead, The Cure, Beatles and Stones, to Zappa and inmaculate Fools to name a few.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6"></div>
-        <div class="col-sm-6"></div>
+      <div class="w-1/2">
+        <img src="./assets/images/concert1.jpg" class="object-cover object-center" alt="The dogs logo"/>
+        <p class="text-xs"><a href="https://www.behance.net/gallery/64267203/Roadkillsoda-2018">"Roadkillsoda 2018"</a> by Lin Al Choibi is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/?ref=ccsearch&atype=html">CC BY-NC-ND 4.0</a><a href="https://creativecommons.org/licenses/by-nc-nd/4.0/?ref=ccsearch&atype=html"></a></p>
       </div>
     </div>
-
-    <nav class="flex items-center justify-between flex-wrap p-6">
-      <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <a class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54" href="index.html"><img src="./assets/images/logo.png" alt="The dogs logo"/></a>
+    <hr class="mx-12">
+    <div class="flex px-12 py-4">
+      <div class="w-1/4">
+        <img src="./assets/images/concert.jpg" class="img-fluid" alt="The dogs logo"/>
+        <p class="text-xs"><a href="https://www.behance.net/gallery/64267479/Ufomammut-2018">"Ufomammut 2018"</a> by Lin Al Choibi is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/?ref=ccsearch&atype=html">CC BY-NC-ND 4.0</a><a href="https://creativecommons.org/licenses/by-nc-nd/4.0/?ref=ccsearch&atype=html"></a></p>
       </div>
-      <div class="block lg:hidden">
-        <button class="flex items-center px-3 py-2 border rounded hover:text-black hover:border-black">
-          <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
-        </button>
+      <div class="w-3/4 pl-4">
+        <dl>
+          <dt class="font-bold">We bark, but we don't bite</dt>
+          <dd>Yes, we make noise, we are dogs. But don't be afraid because we don't bite, we are really charmy.</dd>
+          <dt class="font-bold">We like the street</dt>
+          <dd>Yes, we rather than be at home. It will be easy to find us time to time playing music in any corner.</dd>
+          <dt class="font-bold">We go out at night</dt>
+          <dd>Yes, the day can be a great moment to play music, but our best it is given by night.</dd>
+        </dl>
       </div>
-      <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
-        <div class="text-sm lg:flex-grow">
-          <a href="./index.html" class="block mt-4 lg:inline-block lg:mt-0 hover:text-gray mr-4">
-            Our music
-          </a>
-          <a href="./contact.html" class="block mt-4 lg:inline-block lg:mt-0 hover:text-gray mr-4">
-            Contact
-          </a>
-        </div>
+    </div>
+    <hr class="mx-12">
+    <div class="flex px-12 py-4">
+      <div class="w-1/4">
+        <p class="font-bold">People tells us "It is easy to play someone else music". We answer "Maybe. But listen and tell us if it's better than the original".</p>
       </div>
-      <div class="navbar-text">
+      <div class="w-3/4">
+        <p>After 2 years of steady gigs, "The Dogs" are clearly running on all cylinders and have the same enthusiasm since the first moment. With over 35 songs in the current library, "The Dogs" can easily play 2 hours without repeating a song. The list of artists runs from The Ramones, Bruce Springteen, ZZ Top, The Grateful Dead, The Cure, Beatles and Stones, to Zappa and inmaculate Fools to name a few.</p>
+      </div>
+    </div>
+    <nav class="flex items-center justify-between bg-gray-200 px-12 py-4">
+      <div>
+        <a href="index.html"><img class="h-10"src="./assets/images/logo.png" alt="The dogs logo"/></a>
+      </div>
+      <div>
+        <a href="./index.html" class="hover:bg-gray-600 mr-4">Our music</a>
+        <a href="./contact.html" class="hover:bg-gray-600 mr-4">Contact</a>
+      </div>
+      <div class="invisible md:visible">
         <a href="https://instagram.com/"><i class="p-2 fab fa-instagram"></i></a>
         <a href="https://twitter.com/"><i class="p-2 fab fa-twitter"></i></a>
         <a href="https://facebook.com/"><i class="p-2 fab fa-facebook"></i></a>
