--- a/src/contact.html
+++ b/src/contact.html
@@ -17,7 +17,7 @@
         <a href="index.html"><img class="h-10"src="./assets/images/logo.png" alt="The dogs logo"/></a>
       </div>
       <div>
-        <a href="./contact.html" class="hover:bg-gray-600">Contact</a>
+        <a href="./index.html" class="hover:bg-gray-600">Our music</a>
       </div>  
     </nav>
 
@@ -27,25 +27,48 @@
     <div class="flex justify-center pb-4">
       <span class="italic text-4xl">rock music band</span>
     </div>
-    
-    <div class="container">
-      <div class="jumbotron">
-        <h1 class="lead">Contact us</h1>
-        <p>We want to hear from you to ask us for playing somewhere, to introduce yourself as a musician, to hear anything...</p>
-      </div>
-      <form class="text-center border border-light p-5" name="contact" method="POST" data-netlify="true">
-        <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Name">
-        <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail">
-        <label>Subject</label>
-        <select class="browser-default custom-select mb-4">
-          <option value="1" selected>Say hello...</option>
-          <option value="2">I want to contract you...</option>
-          <option value="3">I would like to play with you...</option>
-        </select>
-        <div class="form-group">
-          <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" placeholder="Message"></textarea>
+
+    <div class="px-12">
+      <p class="lead text-xl">Contact us!</p>
+      <p class="italic">We want to hear from you to ask us for playing somewhere, to introduce yourself as a musician, to say anything...</p>
+    </div>
+      <form class="w-full p-12" name="contact" method="POST" data-netlify="true">
+        <div class="flex flex-wrap -mx-3 mb-6">
+          <div class="w-full px-3">
+            <!-- <label class="block mb-2" for="name">Name</label> -->
+            <input class="appearance-none block w-1/2 text-gray-600 border border-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="name" type=text placeholder="Name">
+          </div>
         </div>
-        <!--<button class="btn btn-secondary float-right" type="submit">Send</button>-->
+        <div class="flex flex-wrap -mx-3 mb-6">
+          <div class="w-full px-3">
+            <!-- <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">E-mail</label> -->
+            <input class="appearance-none block w-1/2 text-gray-600 border border-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email">
+          </div>
+        </div>
+        <div class="flex flex-wrap mb-6 inline-block w-64">
+          <select class="appearance-none block w-full text-gray-600 border border-gray-700 hover:border-gray-500 px-4 py-2 pr-8 rounded leading-tight focus:outline-none focus:shadow-outline">
+            <option>Say hello...</option>
+            <option>I want to contract you...</option>
+            <option>I want to play with you...</option>
+          </select>
+          <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>
+        </div>
+        <div class="flex flex-wrap -mx-3 mb-6">
+          <div class="w-full px-3">
+            <!-- <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">Message</label> -->
+            <textarea class=" no-resize appearance-none block w-full text-gray-600 border border-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:shadow-outline h-48 resize-none" id="message" placeholder="Message"></textarea>
+          </div>
+        </div>
+        <div class="md:flex md:items-center">
+          <div class="md:w-1/3">
+            <button class="shadow bg-gray-600 hover:bg-gray-800 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+              Send
+            </button>
+          </div>
+          <div class="md:w-2/3"></div>
+        </div>
       </form>
     </div>
       
