Applying Tailwind components

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   </head>
   
   <body>
-    <nav class="flex items-center justify-between bg-gray-200 px-12 py-4">
+    <nav class="flex-default-config bg-gray-200 px-12 py-4">
       <div>
         <a href="index.html"><img class="h-10"src="./assets/images/logo.png" alt="The dogs logo"/></a>
       </div>
@@ -57,7 +57,7 @@
       </div>
     </div>
     <hr class="mx-12">
-    <div class="flex px-12 py-4">
+    <div class="flex items-center justify-between px-12 py-4">
       <div class="w-1/4">
         <p class="font-bold">People tells us "It is easy to play someone else music". We answer "Maybe. But listen and tell us if it's better than the original".</p>
       </div>
@@ -65,7 +65,7 @@
         <p>After 2 years of steady gigs, "The Dogs" are clearly running on all cylinders and have the same enthusiasm since the first moment. With over 35 songs in the current library, "The Dogs" can easily play 2 hours without repeating a song. The list of artists runs from The Ramones, Bruce Springteen, ZZ Top, The Grateful Dead, The Cure, Beatles and Stones, to Zappa and inmaculate Fools to name a few.</p>
       </div>
     </div>
-    <nav class="flex items-center justify-between bg-gray-200 px-12 py-4">
+    <nav class="flex-default-config bg-gray-200 px-12 py-4">
       <div>
         <a href="index.html"><img class="h-10"src="./assets/images/logo.png" alt="The dogs logo"/></a>
       </div>
