--- a/src/contact.html
+++ b/src/contact.html
@@ -12,7 +12,7 @@
   </head>
   
   <body>
-    <nav class="flex items-center justify-between bg-gray-200 px-12 py-4">
+    <nav class="flex-default-config bg-gray-200 px-12 py-4">
       <div>
         <a href="index.html"><img class="h-10"src="./assets/images/logo.png" alt="The dogs logo"/></a>
       </div>
@@ -33,20 +33,18 @@
       <p class="italic">We want to hear from you to ask us for playing somewhere, to introduce yourself as a musician, to say anything...</p>
     </div>
       <form class="w-full p-12" name="contact" method="POST" data-netlify="true">
-        <div class="flex flex-wrap -mx-3 mb-6">
+        <div class="flex-default-config -mx-3 mb-6">
           <div class="w-full px-3">
-            <!-- <label class="block mb-2" for="name">Name</label> -->
-            <input class="appearance-none block w-1/2 text-gray-600 border border-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="name" type=text placeholder="Name">
+            <input class="form-field  w-1/2 focus:outline-none focus:shadow-outline" id="name" type=text placeholder="Name">
           </div>
         </div>
-        <div class="flex flex-wrap -mx-3 mb-6">
+        <div class="flex-default-config -mx-3 mb-6">
           <div class="w-full px-3">
-            <!-- <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">E-mail</label> -->
-            <input class="appearance-none block w-1/2 text-gray-600 border border-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email">
+            <input class="form-field w-1/2 focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email">
           </div>
         </div>
-        <div class="flex flex-wrap mb-6 inline-block w-64">
-          <select class="appearance-none block w-full text-gray-600 border border-gray-700 hover:border-gray-500 px-4 py-2 pr-8 rounded leading-tight focus:outline-none focus:shadow-outline">
+        <div class="flex-default-config mb-6 inline-block w-64">
+          <select class="form-field w-full focus:outline-none focus:shadow-outline">
             <option>Say hello...</option>
             <option>I want to contract you...</option>
             <option>I want to play with you...</option>
@@ -55,9 +53,8 @@
             <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
           </div>
         </div>
-        <div class="flex flex-wrap -mx-3 mb-6">
+        <div class="flex-default-config -mx-3 mb-6">
           <div class="w-full px-3">
-            <!-- <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">Message</label> -->
             <textarea class=" no-resize appearance-none block w-full text-gray-600 border border-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:shadow-outline h-48 resize-none" id="message" placeholder="Message"></textarea>
           </div>
         </div>
@@ -72,7 +69,7 @@
       </form>
     </div>
       
-    <nav class="flex items-center justify-between bg-gray-200 px-12 py-4">
+    <nav class="flex-default-config bg-gray-200 px-12 py-4">
       <div>
         <a href="index.html"><img class="h-10"src="./assets/images/logo.png" alt="The dogs logo"/></a>
       </div>
